apps/mealie/overlays/prod/ingress-route-ext.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: mealie-ingress-ext
  namespace: mealie
spec:
  entryPoints:
    - websecure-ext
  routes:
    - match: Host(`mealie.sobrinho.pt`)
      kind: Rule
      middlewares:
        - name: middleware-auth-forward
          namespace: traefik
      services:
        - name: mealie
          port: http
