apps/mealie/overlays/prod/ingress-route.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: mealie-ingress
  namespace: mealie
  annotations:
    external-dns.alpha.kubernetes.io/target: infra-int

spec:
  entryPoints:
    - websecure
    - websecure-ext
  routes:
    - match: Host(`mealie.sobrinho.pt`)
      kind: Rule
      services:
        - name: mealie
          port: http
